# sudokugenerator

./: .gitignore  README.md  __init__.py  log.py  performance.py  requirements.txt  setup.cfg
models/: position.py
services/: board_service.py  sudoku_generator_service.py
sudokugenerator/: __init__.py
sudokugenerator/interfaces/: board_interface.py  sudoku_generator_interface.py
sudokugenerator/services/: board_service.py  sudoku_generator_service.py
tests/: test_board.py  test_position.py  test_sudoku_generator.py
