[metadata]
name = sudokugenerator
version = 1.0.0
description = Simple class library that generates sudokus
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy

[options.packages.find]
exclude =
    tests
    venv